<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    tools:context="com.example.gpslocator.MainActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/tvTelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_telnumber"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etTelNumber"
        android:layout_below="@+id/tvTelNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="phone">
    </EditText>
    
    <TextView
        android:id="@+id/tvTimeInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTelNumber"
        android:layout_centerHorizontal="true"
        android:text="@string/txt_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
        <EditText
        android:id="@+id/etTimeInterval"
        android:layout_below="@+id/tvTimeInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:ems="2"
        android:inputType="number">
    </EditText>

        <LinearLayout
            android:id="@+id/layButtons"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etTimeInterval" >

            <Button
                android:id="@+id/bStart"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_start" />

        </LinearLayout>

       <TextView
           android:id="@+id/tvTimeStamp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/layButtons"
           android:layout_centerHorizontal="true"
           android:text="@string/txt_lastread"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/tvN"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/tvTimeStamp"
           android:layout_centerHorizontal="true"
           android:padding="5dp"
           android:text="@string/txt_n"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/tvE"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/tvN"
           android:layout_centerHorizontal="true"
           android:padding="5dp"
           android:text="@string/txt_e"
           android:textAppearance="?android:attr/textAppearanceSmall" />

       <TextView
           android:id="@+id/tvAlt"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/tvE"
           android:layout_centerHorizontal="true"
           android:padding="5dp"
           android:text="@string/txt_alt"
           android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>

